--- a/rust-td-layout/Cargo.toml
+++ b/rust-td-layout/Cargo.toml
@@ -12,7 +12,10 @@ boot-kernel = []
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
 log = "0.4.13"
 
+[dev-dependencies]
+memoffset = "0.6"
+
 [build-dependencies]
 json5 = "0.3.0"
-serde = { version = "1.0", features = ["derive"] }
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
+serde = { version = "1.0", features = ["derive"] }
