Add fv parser fuzzing.
Signed-off-by: haowx <weiX.Hao@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
      "benchmark",
      "fuzzing/fuzz_pe_loader",
      "fuzzing/fuzz_elf_loader",
+     "fuzzing/fuzz_fv_parser",
      "no_std_test"
      ]
 
