--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
      "fuzzing/fuzz_pe_loader",
      "fuzzing/fuzz_elf_loader",
      "fuzzing/fuzz_fv_parser",
+     "fuzzing/fuzz_hob_parser",
      "no_std_test"
      ]
 
