Add a secure boot signing tool example
This tool takes unsigned payload image with payload version and SVN,
private key file with signing algorithm indicator as input.

It generates a signed payload binary which contains verify header, public
key and signature.

Only DER encoded PKCS#8 format public file is supported.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ members = [
      "fuzzing/fuzz_elf_loader",
      "fuzzing/fuzz_fv_parser",
      "fuzzing/fuzz_hob_parser",
-     "no_std_test"
+     "no_std_test",
+     "rust-tdpayload-signing",
      ]
 
 default-members = ["rust-tdshim", "rust-td-payload"]
