--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
      "fuzzing/fuzz_hob_parser",
      "no_std_test",
      "rust-tdpayload-signing",
+     "rust-tdshim-key-enroll",
      ]
 
 default-members = ["rust-tdshim", "rust-td-payload"]
