--- a/rust-tdshim/Cargo.toml
+++ b/rust-tdshim/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 
 [features]
 cet-ss = []
+secure-boot = []
 
 [build-dependencies]
 cc = { git = "https://github.com/jyao1/cc-rs.git", branch = "uefi_support" }
@@ -27,13 +28,14 @@ tdx-logger =  { path = "../tdx-logger" }
 tdx-exception =  { path = "../tdx-exception" }
 rust-td-layout = { path = "../rust-td-layout" }
 paging = { path = "../rust-paging" }
-ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false }
+ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"]}
 scroll = { version = "0.10", default-features = false, features = ["derive"] }
 x86_64 = "=0.14.6"
 x86 = "0.43.0"
 spin = "0.9.2"
 bitflags = "1.2.1"
 zerocopy = "0.6.0"
+der = {version = "0.4.5", features = ["derive", "alloc"]}
 
 [dependencies.lazy_static]
 version = "1.0"
