--- a/tdx-logger/Cargo.toml
+++ b/tdx-logger/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 tdx-tdcall = { path = "../tdx-tdcall" }
 spin = "0.9.2"
 log = "0.4.13"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
