--- a/rust-paging/Cargo.toml
+++ b/rust-paging/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "paging"
 version = "0.1.0"
+description = "A simple page table manager"
+repository = "https://github.com/confidential-containers/td-shim"
+homepage = "https://github.com/confidential-containers"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "BSD-2-Clause-Patent"
 
 [dependencies]
 bitfield = "0.13.2"
