td-layout-config: convert rust-td-layout/build.rs into a devtool
Convert rust-td-layout/build.rs into a devtool, and commit the generated
files into the rust-td-layout crate. That helps to reduce build time for
development.

Fixes: #33

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 default-members = ["rust-tdshim", "rust-td-payload"]
 members = [
+    "devtools/td-layout-config",
     "rust-tdshim",
     "rust-td-payload",
     "rust-td-tool",
