--- a/devtools/td-layout-config/Cargo.toml
+++ b/devtools/td-layout-config/Cargo.toml
@@ -1,20 +1,16 @@
 [package]
-name = "rust-td-layout"
+name = "td-layout-config"
 version = "0.1.0"
-description = "Define build time and runtime layout for trusted domain"
+description = "Generate TD layout constants from configuration files"
 repository = "https://github.com/confidential-containers/td-shim"
 homepage = "https://github.com/confidential-containers"
 license = "BSD-2-Clause-Patent"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[features]
-boot-kernel = []
-
 [dependencies]
+clap = { version = "3.0", features = ["cargo"] }
+json5 = "0.3.0"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
-log = "0.4.13"
+serde = { version = "1.0", features = ["derive"] }
 
-[dev-dependencies]
-memoffset = "0.6"
+rust-td-layout = { path = "../../rust-td-layout" }
