--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ cargo-features = ["resolver"]
 resolver = "2"
 default-members = ["rust-tdshim", "rust-td-payload"]
 members = [
+    "devtools/td-layout-config",
     "rust-tdshim",
     "rust-td-payload",
     "rust-td-tool",
