no_std_test: convert no_std_test into devtools/test-runner-server
The no_std_test crate acts as a server to run unit test cases, so
host it under devtool/test-runner-server. As it's only a devtool,
we may hold suitable quality bars for it.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 default-members = ["rust-tdshim", "rust-td-payload"]
 members = [
     "devtools/td-layout-config",
+    "devtools/test-runner-server",
     "rust-tdshim",
     "rust-td-payload",
     "rust-td-tool",
