test_lib: convert test_lib to devtools/test-runner-client
The test_lib crates acts a client running inside the vm and cooperate
with the test-runner-server to execute unit test cases. So convert it
as devtools/test-runner-client.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ default-members = ["rust-tdshim", "rust-td-payload"]
 members = [
     "devtools/td-layout-config",
     "devtools/test-runner-server",
+    "devtools/test-runner-client",
     "rust-tdshim",
     "rust-td-payload",
     "rust-td-tool",
