test-runner: remove no_std_test/test_lib
Switch from no_std_test/test_lib to test-runner-server/client.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/tests/test-td-paging/Cargo.toml
+++ b/tests/test-td-paging/Cargo.toml
@@ -11,7 +11,7 @@ license = "BSD-2-Clause-Patent"
 bootloader = "=0.10.9"
 td-paging = { path = "../../td-paging" }
 td-layout = { path = "../../td-layout" }
-test_lib = { path = "../../test_lib" }
+test-runner-client = { path = "../../devtools/test-runner-client" }
 
 [package.metadata.bootloader]
 map-physical-memory = true
