--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.'cfg(target_os = "none")']
-runner = "cargo run --package no_std_test --"
+runner = "cargo run --package test-runner-server --"
 
 [alias]
 kbuild = "build --target x86_64-custom.json -Zbuild-std=core -Zbuild-std-features=compiler-builtins-mem"
