rust-paing: rename to td-paging
The rust-paging crate depends on the rust-td-layout crate, so it's
already TD specific. So rename it to td-paging, to keep consistence
with other crates.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ members = [
     "rust-tdpayload-signing",
     "rust-tdshim-key-enroll",
     "rust-test-payload",
-    "tests/rust-test-paging",
+    "td-layout",
+    "td-paging",
+    "tests/test-td-paging",
 ]
 
 # the profile used for `cargo build`
