--- a/devtools/td-layout-config/Cargo.toml
+++ b/devtools/td-layout-config/Cargo.toml
@@ -13,4 +13,4 @@ json5 = "0.3.0"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
 serde = { version = "1.0", features = ["derive"] }
 
-rust-td-layout = { path = "../../rust-td-layout" }
+td-layout = { path = "../../td-layout" }
