--- a/td-paging/Cargo.toml
+++ b/td-paging/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "paging"
+name = "td-paging"
 version = "0.1.0"
 description = "A simple page table manager"
 repository = "https://github.com/confidential-containers/td-shim"
@@ -12,5 +12,5 @@ bitfield = "0.13.2"
 x86 = "0.41.0"
 x86_64 = "=0.14.6"
 log = "0.4.13"
-rust-td-layout = { path = "../rust-td-layout" }
+td-layout = { path = "../td-layout" }
 spin = "0.9.2"
