rust-test-payload: rename to test-td-payload
Rename rust-test-payload to tests/test-td-payload.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ members = [
     "fuzzing/fuzz_hob_parser",
     "rust-tdpayload-signing",
     "rust-tdshim-key-enroll",
-    "rust-test-payload",
     "td-layout",
     "td-paging",
     "tests/test-td-paging",
+    "tests/test-td-payload",
 ]
 
 # the profile used for `cargo build`
