benchmark: move benchmark into devtools directory
The benchmark crate is a library to support benchmark for no_std
applications. So move it into devtools directory.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ resolver = "2"
 default-members = ["rust-tdshim", "td-payload"]
 members = [
     "devtools/td-layout-config",
+    "devtools/td-benchmark",
     "devtools/test-runner-server",
     "devtools/test-runner-client",
     "rust-tdshim",
     "rust-td-tool",
-    "benchmark",
     "fuzzing/fuzz_pe_loader",
     "fuzzing/fuzz_elf_loader",
     "fuzzing/fuzz_fv_parser",
