td-shim-ld: refine the td-shim-ld crate
Refine the td-shim-ld crate by:
1) improve commandline parsing
2) simplify the way to write out the firmware file
3) validate size of input files
4) introduce `as_bytes()` to avoid intermediate data buffer.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/td-shim-ld/Cargo.toml
+++ b/td-shim-ld/Cargo.toml
@@ -12,6 +12,7 @@ default = []
 boot-kernel = ["td-layout/boot-kernel"]
 
 [dependencies]
+clap = { version = "3.0", features = ["cargo"] }
 env_logger = "0.9.0"
 log = "0.4.5"
 pe-loader = { path = "../pe-loader" }
