td-shim-enroll-key: rename rust-tdshim-key-enroll
Rename rust-tdshim-key-enroll to td-shim-enroll-key.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ members = [
     "fuzzing/fuzz_fv_parser",
     "fuzzing/fuzz_hob_parser",
     "rust-tdpayload-signing",
-    "rust-tdshim-key-enroll",
     "td-layout",
     "td-paging",
     "td-payload",
+    "td-shim-enroll-key",
     "td-shim-ld",
     "tests/test-td-paging",
     "tests/test-td-payload",
