td-shim-sign-payload: rename rust-tdpayload-signing
Rename rust-tdpayload-signing to td-shim-sign-payload.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,12 @@ members = [
     "fuzzing/fuzz_elf_loader",
     "fuzzing/fuzz_fv_parser",
     "fuzzing/fuzz_hob_parser",
-    "rust-tdpayload-signing",
     "td-layout",
     "td-paging",
     "td-payload",
     "td-shim-enroll-key",
     "td-shim-ld",
+    "td-shim-sign-payload",
     "tests/test-td-paging",
     "tests/test-td-payload",
 ]
