--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,14 +68,14 @@ jobs:
           pushd td-payload
           cargo xbuild --target x86_64-unknown-uefi --release
           popd
-          cargo run -p rust-td-tool -- target/x86_64-unknown-uefi/release/ResetVector.bin target/x86_64-unknown-uefi/release/rust-tdshim.efi target/x86_64-unknown-uefi/release/td-payload.efi target/x86_64-unknown-uefi/release/final.bin
+          cargo run -p td-shim-ld -- target/x86_64-unknown-uefi/release/ResetVector.bin target/x86_64-unknown-uefi/release/rust-tdshim.efi target/x86_64-unknown-uefi/release/td-payload.efi -o target/x86_64-unknown-uefi/release/final.bin
 
       - name: Build Elf format payload
         run: |
           pushd td-payload
           cargo xbuild --target ../devtools/rustc-targets/x86_64-unknown-none.json --release
           popd
-          cargo run -p rust-td-tool -- target/x86_64-unknown-uefi/release/ResetVector.bin target/x86_64-unknown-uefi/release/rust-tdshim.efi target/x86_64-unknown-none/release/td-payload target/x86_64-unknown-uefi/release/final.bin
+          cargo run -p td-shim-ld -- target/x86_64-unknown-uefi/release/ResetVector.bin target/x86_64-unknown-uefi/release/rust-tdshim.efi target/x86_64-unknown-none/release/td-payload -o target/x86_64-unknown-uefi/release/final.bin
 
   test:
     name: Test
