pe-loader: zero out BSS area
When `section.virtual_size` is bigger than `section.size_of_raw_data`,
the BSS area should be filled with zero.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/pe-loader/Cargo.toml
+++ b/pe-loader/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "pe-loader"
 version = "0.1.0"
+description = "Parser and loader for 64 bit Portable Executable (PE+) binary objects"
+repository = "https://github.com/confidential-containers/td-shim"
+homepage = "https://github.com/confidential-containers"
+license = "Apache 2.0"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = "0.4.13"
