td-layout: define td-shim on-disk and in-memory layout
Introduce crate td-layout to define ondisk (file/build-time) and
in-memory (runtime) layout for td-shim.

Also introduce devtools/td-layout-config to generate layout definitions
from a json configuration file.

Signed-off-by: Jiewen Yao <jiewen.yao@intel.com>
Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ resolver = "2"
 default-members = ["fake"]
 members = [
 	"fake",
+	"devtools/td-layout-config",
+	"td-layout",
 ]
 
 # the profile used for `cargo build`
