--- a/devtools/td-layout-config/Cargo.toml
+++ b/devtools/td-layout-config/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "td-layout-config"
 version = "0.1.0"
-description = "Generate TD layout constants from configuration files"
+description = "Generate td-shim build-time/runtime layout from a json configuration file"
 repository = "https://github.com/confidential-containers/td-shim"
 homepage = "https://github.com/confidential-containers"
 license = "BSD-2-Clause-Patent"
@@ -12,5 +12,4 @@ clap = { version = "3.0", features = ["cargo"] }
 json5 = "0.3.0"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
 serde = { version = "1.0", features = ["derive"] }
-
 td-layout = { path = "../../td-layout" }
