--- a/.github/workflows/library.yml
+++ b/.github/workflows/library.yml
@@ -10,11 +10,11 @@ on:
 name: Library Crates
 
 env:
-  RUST_TOOLCHAIN: nightly-2021-08-20
+  RUST_TOOLCHAIN: 1.58.1
   TOOLCHAIN_PROFILE: minimal
 
 jobs:
-  library_compile:
+  compile:
     name: Build Library Crates
     runs-on: ${{ matrix.host_os }}
     timeout-minutes: 30
@@ -34,15 +34,15 @@ jobs:
           version: "10.0"
           directory: ${{ runner.temp }}/llvm
 
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install toolchain
+      - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: ${{ env.TOOLCHAIN_PROFILE }}
           toolchain: ${{ env.RUST_TOOLCHAIN }}
           override: true
+
+      - name: Checkout sources
+        uses: actions/checkout@v2
 
       - name: Cache
         uses: Swatinem/rust-cache@v1
@@ -61,11 +61,27 @@ jobs:
     timeout-minutes: 30
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: install NASM
+        uses: ilammy/setup-nasm@v1
+
+      - name: Install LLVM and Clang
+        uses: KyleMayes/install-llvm-action@v1
         with:
-          profile: minimal
+          version: "10.0"
+          directory: ${{ runner.temp }}/llvm
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: ${{ env.TOOLCHAIN_PROFILE }}
+          toolchain: ${{ env.RUST_TOOLCHAIN }}
           override: true
+
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Cache
+        uses: Swatinem/rust-cache@v1
 
       - name: Test library crates
         run: make lib-test
