td-exception: rename tdx-exception to td-exception
Most code in tdx-exception is generic to x86_64, so rename it to
td-exception.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "fuzzing/fuzz_elf_loader",
     "fuzzing/fuzz_fv_parser",
     "fuzzing/fuzz_hob_parser",
+    "td-exception",
     "td-layout",
     "td-paging",
     "td-payload",
