--- a/td-exception/Cargo.toml
+++ b/td-exception/Cargo.toml
@@ -11,4 +11,7 @@ edition = "2018"
 bitflags = "1.2.1"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 log = "0.4.13"
-tdx-tdcall =  { path = "../tdx-tdcall" }
+tdx-tdcall =  { path = "../tdx-tdcall", optional = true }
+
+[features]
+tdx = ["tdx-tdcall"]
