td-exception: add mechanism to support unit test
Add feature "test" to support unit test.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "td-shim-enroll-key",
     "td-shim-ld",
     "td-shim-sign-payload",
+    "tests/test-td-exception",
     "tests/test-td-paging",
     "tests/test-td-payload",
 ]
