--- a/uefi-pi/Cargo.toml
+++ b/uefi-pi/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "uefi-pi"
 version = "0.1.0"
+description = "UEFI Platform Independent data structures"
+repository = "https://github.com/confidential-containers/td-shim"
+homepage = "https://github.com/confidential-containers"
+license = "BSD-2-Clause-Patent"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 r-efi = "3.2.0"
