--- a/td-shim-ld/Cargo.toml
+++ b/td-shim-ld/Cargo.toml
@@ -17,6 +17,6 @@ env_logger = "0.9.0"
 log = "0.4.5"
 pe-loader = { path = "../pe-loader" }
 r-efi = "3.2.0"
-r-uefi-pi =  { path = "../r-uefi-pi" }
 scroll = { version = "0.10", default-features=false }
 td-layout = { path = "../td-layout" }
+uefi-pi =  { path = "../uefi-pi" }
