td-logger: refactor tdx-logger as td-logger
Refactor tdx-logger as td-logger by:
1) renaming the crate
2) add feature "tdx" and "serial port"
3) remove duplicated code
4) enable it for non-tdx platform

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "fuzzing/fuzz_hob_parser",
     "td-exception",
     "td-layout",
+    "td-logger",
     "td-paging",
     "td-payload",
     "td-shim-enroll-key",
