--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
 	"devtools/test-runner-client",
 	"devtools/test-runner-server",
 	"td-layout",
+	"td-paging",
 ]
 
 # the profile used for `cargo build`
