--- a/tdx-tdcall/Cargo.toml
+++ b/tdx-tdcall/Cargo.toml
@@ -1,20 +1,18 @@
 [package]
 name = "tdx-tdcall"
 version = "0.1.0"
+description = "Data stuctures and wrappers for TD_CALL/TDVM_CALL"
+repository = "https://github.com/confidential-containers/td-shim"
+homepage = "https://github.com/confidential-containers"
+license = "BSD-2-Clause-Patent"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+lazy_static = { version = "1.0", features = ["spin_no_std"] }
 log = "0.4.13"
-spin = "0.9.2"
 scroll = { version = "0.10", default-features=false, features = ["derive"] }
-[dependencies.lazy_static]
-version = "1.0"
-features = ["spin_no_std"]
+spin = "0.9.2"
 
 [features]
-
 default = []
-
 use_tdx_emulation = []
