--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         host_os:
           - ubuntu-20.04
-#          - windows-2019
+          - windows-2019
     steps:
       - name: install NASM
         uses: ilammy/setup-nasm@v1
