--- a/rust-tdshim/Cargo.toml
+++ b/rust-tdshim/Cargo.toml
@@ -31,7 +31,8 @@ td-paging = { path = "../td-paging" }
 ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"]}
 scroll = { version = "0.10", default-features = false, features = ["derive"] }
 x86_64 = "=0.14.6"
-x86 = "0.43.0"
+# Lock down to 0.44, otherwise it depends on inline asm
+x86 = "0.44.0"
 spin = "0.9.2"
 bitflags = "1.2.1"
 zerocopy = "0.6.0"
