--- a/td-paging/Cargo.toml
+++ b/td-paging/Cargo.toml
@@ -9,8 +9,9 @@ edition = "2018"
 
 [dependencies]
 bitfield = "0.13.2"
-x86 = "0.41.0"
-x86_64 = "=0.14.6"
 log = "0.4.13"
-td-layout = { path = "../td-layout" }
 spin = "0.9.2"
+td-layout = { path = "../td-layout" }
+# Lock down to 0.44, otherwise it depends on inline asm
+x86 = "0.44.0"
+x86_64 = "=0.14.6"
