tdx-tdcall: add introduce and wrapper for tdcalls
The Intel TDX defines a group of TDCALLs, so the trusted domain may ask
for services from the underlying hardware/firmware. This crates defines
constants, structures and functions to access those services.

Signed-off-by: Jiewen Yao <jiewen.yao@intel.com>
Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
 	"devtools/test-runner-server",
 	"td-layout",
 	"td-paging",
+	"tdx-tdcall",
 ]
 
 # the profile used for `cargo build`
