--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "td-shim-enroll-key",
     "td-shim-ld",
     "td-shim-sign-payload",
+    "tdx-bootstrap",
     "tdx-tdcall",
     "tests/test-td-exception",
     "tests/test-td-paging",
