--- a/rust-tdshim/Cargo.toml
+++ b/rust-tdshim/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 build = "build.rs"
 
 [features]
+default = ["cet-ss", "secure-boot", "boot-kernel"]
 cet-ss = []
-secure-boot = []
+secure-boot = ["der"]
 boot-kernel = ["td-layout/boot-kernel"]
 
 [build-dependencies]
@@ -17,27 +18,25 @@ td-layout = { path = "../td-layout" }
 tdx-tdcall = { path = "../tdx-tdcall" }
 
 [dependencies]
-r-efi = "3.2.0"
+der = {version = "0.4.5", features = ["derive", "alloc"], optional = true}
+elf-loader = { path = "../elf-loader" }
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 linked_list_allocator = "0.9.0"
 log = "0.4.13"
-elf-loader = { path = "../elf-loader" }
 pe-loader = { path = "../pe-loader" }
-uefi-pi =  { path = "../uefi-pi" }
-tdx-tdcall = { path = "../tdx-tdcall" }
-td-logger =  { path = "../td-logger" }
+r-efi = "3.2.0"
+ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"] }
+scroll = { version = "0.10", default-features = false, features = ["derive"] }
+spin = "0.9.2"
 td-exception =  { path = "../td-exception", features = ["tdx"] }
 td-layout = { path = "../td-layout" }
+td-logger =  { path = "../td-logger" }
 td-paging = { path = "../td-paging" }
-ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"]}
-scroll = { version = "0.10", default-features = false, features = ["derive"] }
-x86_64 = "=0.14.6"
+uefi-pi =  { path = "../uefi-pi" }
 # Lock down to 0.44, otherwise it depends on inline asm
 x86 = "0.44.0"
-spin = "0.9.2"
-bitflags = "1.2.1"
+x86_64 = "=0.14.6"
 zerocopy = "0.6.0"
-der = {version = "0.4.5", features = ["derive", "alloc"]}
 
-[dependencies.lazy_static]
-version = "1.0"
-features = ["spin_no_std"]
+tdx-tdcall = { path = "../tdx-tdcall" }
+
