--- a/td-shim-ld/Cargo.toml
+++ b/td-shim-ld/Cargo.toml
@@ -8,15 +8,17 @@ license = "BSD-2-Clause-Patent"
 edition = "2018"
 
 [features]
-default = []
+default = ["linker"]
 boot-kernel = ["td-layout/boot-kernel"]
+linker = ["clap", "env_logger", "log", "pe-loader"]
 
 [dependencies]
-clap = { version = "3.0", features = ["cargo"] }
-env_logger = "0.9.0"
-log = "0.4.5"
-pe-loader = { path = "../pe-loader" }
 r-efi = "3.2.0"
-scroll = { version = "0.10", default-features=false }
+scroll = { version = "0.10", default-features = false }
 td-layout = { path = "../td-layout" }
 uefi-pi =  { path = "../uefi-pi" }
+
+clap = { version = "3.0", features = ["cargo"], optional = true }
+env_logger = { version = "0.9.0", optional = true }
+log = { version = "0.4.5", optional = true }
+pe-loader = { path = "../pe-loader", optional = true }
