--- a/rust-tdshim/Cargo.toml
+++ b/rust-tdshim/Cargo.toml
@@ -7,11 +7,25 @@ edition = "2018"
 build = "build.rs"
 
 [features]
-default = ["boot-kernel", "cet-ss", "secure-boot"]
+default = ["boot-kernel", "cet-ss", "main", "secure-boot"]
 boot-kernel = ["td-layout/boot-kernel"]
 cet-ss = []
 secure-boot = ["der", "td-shim-enroll-key", "td-shim-sign-payload"]
-tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx"]
+tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
+main = [
+    "elf-loader",
+    "linked_list_allocator",
+    "pe-loader",
+    "r-efi",
+    "ring",
+    "spin",
+    "td-exception",
+    "td-layout",
+    "td-logger",
+    "td-paging",
+    "x86",
+    "x86_64",
+]
 
 [build-dependencies]
 cc = { git = "https://github.com/jyao1/cc-rs.git", branch = "uefi_support" }
@@ -19,24 +33,25 @@ td-layout = { path = "../td-layout" }
 tdx-tdcall = { path = "../tdx-tdcall" }
 
 [dependencies]
-elf-loader = { path = "../elf-loader" }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
-linked_list_allocator = "0.9.0"
 log = "0.4.13"
-pe-loader = { path = "../pe-loader" }
-r-efi = "3.2.0"
-ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"] }
 scroll = { version = "0.10", default-features = false, features = ["derive"] }
-spin = "0.9.2"
-td-exception =  { path = "../td-exception", features = ["tdx"] }
-td-layout = { path = "../td-layout" }
-td-logger =  { path = "../td-logger" }
-td-paging = { path = "../td-paging" }
 uefi-pi =  { path = "../uefi-pi" }
-# Lock down to 0.44, otherwise it depends on inline asm
-x86 = "0.44.0"
-x86_64 = "=0.14.6"
 zerocopy = "0.6.0"
+
+elf-loader = { path = "../elf-loader", optional = true }
+linked_list_allocator = { version = "0.9.0", optional = true }
+ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"], optional = true }
+pe-loader = { path = "../pe-loader", optional = true }
+r-efi = { version = "3.2.0", optional = true }
+spin = { version = "0.9.2", optional = true }
+td-exception =  { path = "../td-exception", features = ["tdx"], optional = true }
+td-layout = { path = "../td-layout", optional = true }
+td-logger =  { path = "../td-logger", optional = true }
+td-paging = { path = "../td-paging", optional = true }
+x86 = { version ="0.44.0", optional = true }
+# Lock down to 0.44, otherwise it depends on inline asm
+x86_64 = { version = "=0.14.6", optional = true }
 
 # secure boot
 der = {version = "0.4.5", features = ["derive", "alloc"], optional = true}
