--- a/rust-tdshim/Cargo.toml
+++ b/rust-tdshim/Cargo.toml
@@ -6,26 +6,9 @@ edition = "2018"
 # add build process
 build = "build.rs"
 
-[features]
-default = ["boot-kernel", "cet-ss", "main", "secure-boot"]
-boot-kernel = ["td-layout/boot-kernel"]
-cet-ss = []
-secure-boot = ["der", "td-shim-enroll-key", "td-shim-sign-payload"]
-tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
-main = [
-    "elf-loader",
-    "linked_list_allocator",
-    "pe-loader",
-    "r-efi",
-    "ring",
-    "spin",
-    "td-exception",
-    "td-layout",
-    "td-logger",
-    "td-paging",
-    "x86",
-    "x86_64",
-]
+[[bin]]
+name = "td-shim"
+required-features = ["main"]
 
 [build-dependencies]
 cc = { git = "https://github.com/jyao1/cc-rs.git", branch = "uefi_support" }
@@ -61,3 +44,23 @@ td-shim-sign-payload = { path = "../td-shim-sign-payload", default-features = fa
 # TDX
 tdx-tdcall = { path = "../tdx-tdcall", optional = true }
 
+[features]
+default = ["boot-kernel", "cet-ss", "secure-boot"]
+boot-kernel = ["td-layout/boot-kernel"]
+cet-ss = []
+secure-boot = ["der", "td-shim-enroll-key", "td-shim-sign-payload"]
+tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
+main = [
+    "elf-loader",
+    "linked_list_allocator",
+    "pe-loader",
+    "r-efi",
+    "ring",
+    "spin",
+    "td-exception",
+    "td-layout",
+    "td-logger",
+    "td-paging",
+    "x86",
+    "x86_64",
+]
