td-shim-tools: rename td-shim-enroll-key as td-shim-tools
Rename td-shim-enroll-key as td-shim-tools, later td-shim-ld and
td-shim-sign-payload will be merged into this crate.

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ members = [
     "td-logger",
     "td-paging",
     "td-payload",
-    "td-shim-enroll-key",
+    "td-shim-tools",
     "td-shim-ld",
     "td-shim-sign-payload",
     "tdx-tdcall",
