Create Metadata Region in TD Shim Image layout.
TD Shim Metadata table is for reporting TD Shim information to the VMM.
Currently it located in TD Shim Image layout Payload Region. I think
this bad. Because:

1. Payload Region has nothing to do with Metadata.
2. Metadata occupies the space of payload(at bottom) is unreasonable.
3. In order to get the offset of the metadata, td-layout-config tool
   needs to depend on td-layout crate.

This patch isolate Metadata Region separately in TD Shim Image.

It has the following benefits:

1. Make payload region and Metadata region more clear.
2. `td-layout-config` doesn't need to depend on `td-layout`.
3. `td-shim-tool` easy to write info into Metadata region.

Signed-off-by: Xiaoyu Lu <xiaoyu1.lu@intel.com>

--- a/devtools/td-layout-config/config.json
+++ b/devtools/td-layout-config/config.json
@@ -17,7 +17,8 @@
                                +--------------+
                payload_size -> | Rust Payload |
                                |     (pad)    |
-                               |   metadata   |
+                               +--------------+
+              metadata_size -> |   metadata   |
                                +--------------+
                    ipl_size -> |   Rust IPL   |
                                |     (pad)    |
@@ -32,7 +33,8 @@
         "temp_stack_guard_size": 0x001000,
         "temp_stack_size": 0x020000,
         "temp_heap_size": 0x020000,
-        "payload_size": 0xC2C000,
+        "payload_size": 0xC2B000,
+        "metadata_size": 0x001000,
         "ipl_size": 0x348000,
         "reset_vector_size": 0x008000
     },
