Makefile: enhance make file to build some libraries with nightly
Enhance the make file by:
1) use nightly toolchain to compile libraries with asm code
2) default to `--release` because td-shim fails with `--debug`
3) use cargo to install/uninstall binaries

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/.github/workflows/library.yml
+++ b/.github/workflows/library.yml
@@ -10,7 +10,8 @@ on:
 name: Library Crates
 
 env:
-  RUST_TOOLCHAIN: 1.58.1
+  STABLE_RUST_TOOLCHAIN: 1.58.1
+  NIGHTLY_RUST_TOOLCHAIN: nightly-2021-08-20
   TOOLCHAIN_PROFILE: minimal
 
 jobs:
@@ -38,7 +39,14 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: ${{ env.TOOLCHAIN_PROFILE }}
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
+          toolchain: ${{ env.STABLE_RUST_TOOLCHAIN }}
+          override: true
+
+      - name: Install nightly toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: ${{ env.TOOLCHAIN_PROFILE }}
+          toolchain: ${{ env.NIGHTLY_RUST_TOOLCHAIN }}
           override: true
 
       - name: Checkout sources
@@ -74,7 +82,14 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: ${{ env.TOOLCHAIN_PROFILE }}
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
+          toolchain: ${{ env.STABLE_RUST_TOOLCHAIN }}
+          override: true
+
+      - name: Install nightly toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: ${{ env.TOOLCHAIN_PROFILE }}
+          toolchain: ${{ env.NIGHTLY_RUST_TOOLCHAIN }}
           override: true
 
       - name: Checkout sources
