--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -23,7 +23,7 @@ required-features = ["signer"]
 r-efi = "3.2.0"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
 td-layout = { path = "../td-layout" }
-td-shim = { path = "../td-shim" }
+td-shim = { path = "../td-shim", default-features = false }
 uefi-pi =  { path = "../uefi-pi" }
 
 clap = { version = "3.0", features = ["cargo"], optional = true }
