Add tools (afl libfuzzer rudra) to dockerfile and makefile, they can be executed in container.
Signed-off-by: haowx <weix.hao.intel.com>

--- a/devtools/dev_container/Dockerfile
+++ b/devtools/dev_container/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && \
     DEBIAN_FRONTEND="noninteractive" apt-get install --no-install-recommends -y \
     build-essential ca-certificates curl gcc git libssl-dev pkg-config ssh \
     clang llvm nasm \
+    screen expect \
     # cleanup
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
@@ -22,3 +23,17 @@ RUN rustup component add rust-src
 RUN rustup component add llvm-tools-preview
 COPY cargo_config /root/.cargo/config
 RUN cargo install cargo-xbuild
+
+# Install fuzzing tools
+# The rust version used now is nightly-2021-08-20, the latest cargo-fuzz needs to be upgraded to the rust version, and nightly-2021-08-20 can use cargo-fuzz 0.10.2 . 
+# For more information, please see doc/fuzzing.md.
+RUN cargo install afl
+RUN cargo install cargo-fuzz --version 0.10.2
+
+# Install rudra
+RUN rustup component add rustc-dev
+RUN cargo install sccache
+RUN set -eux; \
+    git clone https://github.com/sslab-gatech/Rudra.git; \
+    cd Rudra; \
+    ./install-release.sh;
