td-shim-tools: refactor enroll tool to support file enrollment
Extend the td-shim-enroll to support enrollment of raw files into CFV.

Public key is changed as an optional input from command line. Argument
firmware-file can be used to indicate the GUID and path of multiple files
to be enrolled at one time.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -8,7 +8,7 @@ license = "BSD-2-Clause-Patent"
 edition = "2018"
 
 [[bin]]
-name = "td-shim-enroll-key"
+name = "td-shim-enroll"
 required-features = ["enroller"]
 
 [[bin]]
