Update readme and CI files to consistent with the flags change in PR 138
Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -3,9 +3,9 @@ on: [push, pull_request]
 name: Format and Clippy
 
 env:
-  AR: llvm-ar
   AS: nasm
-  CC: clang
+  AR_x86_64_unknown_uefi: llvm-ar
+  CC_x86_64_unknown_uefi: clang
 
 jobs:
   clippy:
