devtools: Migrate to add td-benchmark crate   1. add td-benchmark crate   2. rewrite test-runner-client/README.md
Signed-off-by: haowx <weix.hao.intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ default-members = ["fake"]
 members = [
 	"fake",
 	"devtools/td-layout-config",
+	"devtools/td-benchmark",
 	"devtools/test-runner-client",
 	"devtools/test-runner-server",
 	"td-exception",
