--- a/devtools/td-benchmark/Cargo.toml
+++ b/devtools/td-benchmark/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-name = "td-layout-config"
+name = "td-benchmark"
 version = "0.1.0"
-description = "Generate TD layout constants from configuration files"
+description = "Library to support benchmark for no_std binaries"
 repository = "https://github.com/confidential-containers/td-shim"
 homepage = "https://github.com/confidential-containers"
 license = "BSD-2-Clause-Patent"
 edition = "2018"
 
 [dependencies]
-clap = { version = "3.0", features = ["cargo"] }
-json5 = "0.3.0"
+linked_list_allocator = "0.9.0"
+log = "0.4.13"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
-serde = { version = "1.0", features = ["derive"] }
+td-layout = { path = "../../td-layout" }
+# Lock down to 0.44, otherwise it depends on inline asm
+x86 = "0.44.0"
