--- a/fuzzing/fuzz_hob_parser/Cargo.toml
+++ b/fuzzing/fuzz_hob_parser/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uefi-pi = { path = "../../uefi-pi" }
+td-uefi-pi = { path = "../../td-uefi-pi" }
 afl = { version = "*", optional = true }
 
 [features]
