fuzz: Migrate staging branch fuzzing to main branch
Signed-off-by: haowei <WeiX.Hao@intel.com>

--- a/td-loader/fuzz/Cargo.toml
+++ b/td-loader/fuzz/Cargo.toml
@@ -30,3 +30,16 @@ name = "elf"
 path = "fuzz_targets/elf.rs"
 test = false
 doc = false
+
+[[bin]]
+name = "afl_pe"
+path = "fuzz_targets/afl_pe.rs"
+test = false
+doc = false
+
+[[bin]]
+name = "afl_elf"
+path = "fuzz_targets/afl_elf.rs"
+test = false
+doc = false
+
