ld to generate the final binary and doc
Signed-off-by: Jiewen Yao <jiewen.yao@intel.com>

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

Signed-off-by: haowei <WeiX.Hao@intel.com>

--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -7,6 +7,18 @@ homepage = "https://github.com/confidential-containers"
 license = "BSD-2-Clause-Patent"
 edition = "2018"
 
+[[bin]]
+name = "td-shim-enroll"
+required-features = ["enroller"]
+
+[[bin]]
+name = "td-shim-ld"
+required-features = ["linker"]
+
+[[bin]]
+name = "td-shim-sign-payload"
+required-features = ["signer"]
+
 [dependencies]
 r-efi = "3.2.0"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
