--- a/.github/workflows/library.yml
+++ b/.github/workflows/library.yml
@@ -13,11 +13,12 @@ env:
   AS: nasm
   AR_x86_64_unknown_uefi: llvm-ar
   CC_x86_64_unknown_uefi: clang
-  RUST_TOOLCHAIN: nightly-2021-08-20
+  STABLE_RUST_TOOLCHAIN: 1.58.1
+  NIGHTLY_RUST_TOOLCHAIN: nightly-2021-08-20
   TOOLCHAIN_PROFILE: minimal
 
 jobs:
-  library_compile:
+  compile:
     name: Build Library Crates
     runs-on: ${{ matrix.host_os }}
     timeout-minutes: 30
@@ -38,15 +39,22 @@ jobs:
       - name: install NASM
         uses: ilammy/setup-nasm@v1
 
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install toolchain
+      - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: ${{ env.TOOLCHAIN_PROFILE }}
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
+          toolchain: ${{ env.STABLE_RUST_TOOLCHAIN }}
           override: true
+
+      - name: Install nightly toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: ${{ env.TOOLCHAIN_PROFILE }}
+          toolchain: ${{ env.NIGHTLY_RUST_TOOLCHAIN }}
+          override: true
+
+      - name: Checkout sources
+        uses: actions/checkout@v2
 
       - name: Cache
         uses: Swatinem/rust-cache@v1
@@ -65,11 +73,35 @@ jobs:
     timeout-minutes: 30
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      # Install first since it's needed to build NASM
+      - name: Install LLVM and Clang
+        uses: KyleMayes/install-llvm-action@v1
         with:
-          profile: minimal
+          version: "10.0"
+          directory: ${{ runner.temp }}/llvm
+
+      - name: install NASM
+        uses: ilammy/setup-nasm@v1
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: ${{ env.TOOLCHAIN_PROFILE }}
+          toolchain: ${{ env.STABLE_RUST_TOOLCHAIN }}
           override: true
+
+      - name: Install nightly toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: ${{ env.TOOLCHAIN_PROFILE }}
+          toolchain: ${{ env.NIGHTLY_RUST_TOOLCHAIN }}
+          override: true
+
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Cache
+        uses: Swatinem/rust-cache@v1
 
       - name: Test library crates
         run: make lib-test
